# AutonomousCaveExploration

./: .gitignore  README.md
ros2_ws/scripts/: takeoff.py  waypoint_generator_start_to_cave_entrance.py
ros2_ws/src/cave_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/cave_navigation/launch/: cave_exploration.launch.py  integrated_mission.launch.py
ros2_ws/src/cave_navigation/rviz/: cave_navigation.rviz
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/config/: controller_params.yaml
ros2_ws/src/controller/launch/: controller.launch.py
ros2_ws/src/controller/src/: controller_node.cpp
ros2_ws/src/frontier_detector/: CMakeLists.txt  package.xml
ros2_ws/src/frontier_detector/config/: frontier_detector_params.yaml
ros2_ws/src/frontier_detector/launch/: frontier_detector.launch.py
ros2_ws/src/frontier_detector/src/: frontier_detector_node.cpp
ros2_ws/src/lantern_detection/: CMakeLists.txt  package.xml
ros2_ws/src/lantern_detection/config/: lantern_detection_params.yaml
ros2_ws/src/lantern_detection/launch/: lantern_detection.launch.py
ros2_ws/src/lantern_detection/src/: lantern_detection_node.cpp
ros2_ws/src/mav_msgs/: CMakeLists.txt
ros2_ws/src/mav_msgs/include/mav_msgs/: eigen_mav_msgs.hpp
ros2_ws/src/mission_control/: CMakeLists.txt  package.xml
ros2_ws/src/mission_control/config/: mission_control_params.yaml
ros2_ws/src/mission_control/launch/: mission_control.launch.py
ros2_ws/src/mission_control/src/: mission_control_node.cpp
ros2_ws/src/mission_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/mission_interfaces/srv/: ExecuteTrajectory.srv
ros2_ws/src/octomap_mapping/octomap_server/: CMakeLists.txt
ros2_ws/src/octomap_mapping/octomap_server/launch/: perception_mapping.launch.py
ros2_ws/src/simulation/: CMakeLists.txt  package.xml
ros2_ws/src/simulation/launch/: simulation.launch.py  unity_ros.launch.py  unity_sim.launch.py
ros2_ws/src/simulation/src/: depth_camera_parser.h  fisheye_camera_parser.h  imu_parser.h  rgb_camera_parser.h  state_estimate_corruptor_node.cpp  true_state_parser.h  unity_command_stream.h  unity_ros.cpp  unity_state.cpp  w_to_unity.cpp
ros2_ws/src/trajectory_generator/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_generator/config/: trajectory_generator_params.yaml
ros2_ws/src/trajectory_generator/launch/: trajectory_generator.launch.py
ros2_ws/src/trajectory_generator/src/: trajectory_generation_node.cpp
