<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cave_navigation</name>
  <version>0.0.1</version>
  <description>Meta-package and launch files for the autonomous cave navigation mission</description>
  <maintainer email="oguzhan.esen@tum.de">Oguzhan Esen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>frontier_detector</exec_depend>
  <exec_depend>trajectory_generator</exec_depend>
  <exec_depend>mission_control</exec_depend>
  <exec_depend>lantern_detection</exec_depend>
  <exec_depend>simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
