<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.1</version>
  <description>SE(3) geometric tracking controller for quadrotor UAV</description>

  <maintainer email="lukas.pries@tum.de">Lukas Pries</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
