<?xml version="1.0"?>
<package format="3">
  <name>mission_control</name>
  <version>0.1.0</version>
  <description>Finite state machine that orchestrates the autonomous cave navigation mission</description>

  <maintainer email="oguzhan.esen@tum.de">Oguzhan Esen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mission_interfaces</depend>
  <depend>eigen</depend>

  <!-- Runtime dependencies (launched alongside this node) -->
  <exec_depend>simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
