<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_generator</name>
  <version>0.1.0</version>
  <description>Sampling-based trajectory planner using quintic polynomials with OctoMap collision checking</description>

  <maintainer email="oguzhan.esen@tum.de">Oguzhan Esen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>mission_interfaces</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
